initial module-infos